<resources>
    <string name="app_name">RxLibraries Sample</string>
    <string name="btn_permission">Rx Permission Sample</string>
    <string name="btn_preferences">Rx Preferences Sample</string>
    <string name="btn_lifecycle">Rx lifecycle Sample</string>
    <string name="permission_text">Sample using <b>RxPermissions</b>, in this example we are requesting for the \"CALL_PHONE\" request in order to make a phone call directly from the app.</string>
    <string name="rxpermission_library">RxPermissions is using the RxJava library for making permession requests and checks with less boilerplate code and more reactive way.</string>
    <string name="btn_clear_cahce">Clear Cache</string>
    <string name="input_number_hint">xx xxx xxx</string>
    <string name="input_number_text">Enter the number you wish to call</string>
    <string name="init_text">Write something in the EditText</string>
    <string name="rxbinding_library">RxBinding is library for handling UI events. It turns UI events into RxJava observables, which reduce the code load, no need for using listeners and handlers. Just use Binding.</string>
    <string name="binding_text">Sample using <b>RxBinding</b>, in this example we simply binded our <i>TextView</i> with the input from <i>EditText</i>.</string>
    <string name="btn_binding">Rx Binding Sample</string>
    <string name="rx_libraries_text">Sample using differents Rx Libraries.</string>
</resources>
