<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".samples.permissions.PermissionsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/rxpermission_library"
            android:textAlignment="center"/>

        <TextView
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/permission_text"
            android:textAlignment="center"/>

        <TextView
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/input_number_text"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/et_number_input"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/input_number_hint"
            android:textAlignment="center"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_call"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Call"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/ic_call"
        android:paddingLeft="20dp"
        android:background="@drawable/btn_primary"/>

</RelativeLayout>