<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".samples.binding.BindingActivity">

    <TextView
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextPrimary"
        android:text="@string/rxbinding_library"
        android:textAlignment="center"/>

    <TextView
        android:layout_marginVertical="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextPrimary"
        android:text="@string/binding_text"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_binded_text"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/init_text"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/et_bind_text_input"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/init_text"
        android:textAlignment="center"/>

</LinearLayout>